# opencv_test

./: CMakeLists.txt  common.h  file_io.cpp  main.cpp  opencv_test.pro
common/: common.h
