cmake_minimum_required(VERSION 2.8)
project(opencv_test)
set(opencv_DIR "/home/yunzhongke/work/ws_opencv/share/OpenCV")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
aux_source_directory(. SRC_LIST)
#file(GLOB INC_LIST common/*.h)
include(${opencv_DIR}/OpenCVConfig.cmake)
include_directories(${OpenCV_INCLUDE_DIR} common)
#include_directories(${OpenCV_INCLUDE_DIR} )
foreach(sourcefile ${SRC_LIST})
    string(REPLACE ".cpp" "" sourcename ${sourcefile})
    string(REPLACE "./" "" sourcename ${sourcename})
    add_executable(${sourcename} ${sourcefile})
    target_link_libraries(${sourcename} ${OpenCV_LIBRARIES})
endforeach(sourcefile ${SRC_LIST})
